change directory for img

--- a/tamplates/comment/index.html
+++ b/tamplates/comment/index.html
@@ -20,7 +20,7 @@
   <div class="comment-main">
     <div class="comment">
       <div class="avatar">
-        <img src="index_files/comm-1.jpg" alt="">
+        <img src="img/comm1.jpg" alt="">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -34,7 +34,7 @@
     </div>
     <div class="comment ">
       <div class="avatar">
-        <img src="index_files/comm-2.jpg" alt="">
+        <img src="img/comm2.jpg" alt="">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -49,7 +49,7 @@
 
     <div class="comment">
       <div class="avatar">
-        <img src="index_files/comm-3.jpg" alt="">
+        <img src="img/comm3.jpg" alt="">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -64,7 +64,7 @@
 
     <div class="comment">
       <div class="avatar">
-        <img src="index_files/comm-4.jpg" alt="">
+        <img src="img/comm4.jpg" alt="">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -79,7 +79,7 @@
 
     <div class="comment">
       <div class="avatar">
-        <img src="index_files/comm-5.jpg" alt="">
+        <img src="img/comm5.jpg" alt="">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -94,7 +94,7 @@
 
     <div class="comment">
       <div class="avatar">
-        <img src="index_files/comm-6.jpg" alt="">
+        <img src="img/comm6.jpg" alt="">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -109,7 +109,7 @@
 
     <div class="comment">
       <div class="avatar">
-        <img src="index_files/comm-7.jpg" alt="">
+        <img src="img/comm7.jpg" alt="">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -124,7 +124,7 @@
 
     <div class="comment">
       <div class="avatar">
-        <img src="index_files/comm-8.jpg" alt="">
+        <img src="img/comm8.jpg" alt="">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -139,7 +139,7 @@
 
     <div class="comment">
       <div class="avatar">
-        <img src="index_files/comm-9.jpg" alt="">
+        <img src="img/comm9.jpg" alt="">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -154,7 +154,7 @@
 
     <div class="comment">
       <div class="avatar">
-        <img src="index_files/comm-10.jpg" alt="">
+        <img src="img/comm10.jpg" alt="">
       </div>
       <div class="comment-content">
         <div class="comment-info">
@@ -167,80 +167,6 @@
       </div>
     </div>
 
-    <div class="comment">
-      <div class="avatar">
-        <img src="index_files/comm-11.jpg" alt="">
-      </div>
-      <div class="comment-content">
-        <div class="comment-info">
-          <span class="comment-name">name</span> <span class="comment-circle"></span>
-          <span class="comment-date"></span>
-        </div>
-        <div class="comment-text">
-          <p>comment</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="comment">
-      <div class="avatar">
-        <img src="index_files/comm-12.jpg" alt="">
-      </div>
-      <div class="comment-content">
-        <div class="comment-info">
-          <span class="comment-name">name</span> <span class="comment-circle"></span>
-          <span class="comment-date"></span>
-        </div>
-        <div class="comment-text">
-          <p>comment</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="comment">
-      <div class="avatar">
-        <img src="index_files/comm-13.jpg" alt="">
-      </div>
-      <div class="comment-content">
-        <div class="comment-info">
-          <span class="comment-name">name</span> <span class="comment-circle"></span>
-          <span class="comment-date"></span>
-        </div>
-        <div class="comment-text">
-          <p>comment</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="comment">
-      <div class="avatar">
-        <img src="index_files/comm-14.jpg" alt="">
-      </div>
-      <div class="comment-content">
-        <div class="comment-info">
-          <span class="comment-name">name</span> <span class="comment-circle"></span>
-          <span class="comment-date"></span>
-        </div>
-        <div class="comment-text">
-          <p>comment</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="comment">
-      <div class="avatar">
-        <img src="index_files/comm-15.jpg" alt="">
-      </div>
-      <div class="comment-content">
-        <div class="comment-info">
-          <span class="comment-name">name</span> <span class="comment-circle"></span>
-          <span class="comment-date"></span>
-        </div>
-        <div class="comment-text">
-          <p>comment</p>
-        </div>
-      </div>
-    </div>
   </div>
 </section>
 
